Add button component

--- a/.babelrc
+++ b/.babelrc
@@ -8,5 +8,9 @@
             "useBuiltIns": true,
             "loose": true
         }]
+    ],
+    "plugins": [
+        "transform-object-rest-spread",
+        "transform-class-properties"
     ]
 }
