--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "buttercup-ui",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Buttercup UI Components in React",
   "main": "dist/index.js",
   "repository": "git@github.com:buttercup-pw/buttercup-ui.git",
@@ -20,15 +20,16 @@
     "babel-plugin-transform-class-properties": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.22.0",
     "babel-preset-env": "^1.1.8",
-    "babel-preset-react": "^6.22.0",
-    "react-icons": "^2.2.3"
+    "babel-preset-react": "^6.22.0"
   },
   "dependencies": {
     "buttercup-generator": "^0.0.2",
     "classnames": "^2.2.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-icons": "^2.2.3",
     "react-popover": "^0.4.4",
-    "styled-components": "^1.4.3"
+    "styled-components": "^1.4.3",
+    "zxcvbn": "^4.4.2"
   }
 }
