--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "repository": "git@github.com:buttercup-pw/buttercup-ui.git",
   "author": "Sallar Kaboli <sallar.kaboli@gmail.com>",
-  "license": "GPL v3",
+  "license": "GPL-3.0",
   "scripts": {
     "build": "babel src --out-dir dist",
     "storybook": "start-storybook -p 6006",
