--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "buttercup-ui",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "description": "Buttercup UI Components in React",
   "main": "dist/index.js",
   "repository": "git@github.com:buttercup-pw/buttercup-ui.git",
@@ -25,6 +25,8 @@
   "dependencies": {
     "buttercup-generator": "^0.0.2",
     "classnames": "^2.2.5",
+    "filter-react-dom-props": "^0.0.2",
+    "polished": "^1.0.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-icons": "^2.2.3",
