--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "buttercup-ui",
+  "name": "@buttercup/ui",
   "version": "0.5.1",
   "description": "Buttercup UI Components in React",
   "main": "dist/index.js",
   "repository": "git@github.com:buttercup/buttercup-ui.git",
   "author": "Sallar Kaboli <sallar.kaboli@gmail.com>",
-  "license": "GPL-3.0",
+  "license": "MIT",
   "scripts": {
     "build": "babel src --out-dir dist",
     "storybook": "start-storybook -p 6006",
