--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "prepublish": "npm run build",
+    "format": "prettier --write '{src,stories}/**/*.js'",
     "deploy": "./deploy"
   },
   "devDependencies": {
@@ -20,10 +21,13 @@
     "babel-plugin-transform-class-properties": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.22.0",
     "babel-preset-env": "^1.1.8",
-    "babel-preset-react": "^6.22.0"
+    "babel-preset-react": "^6.22.0",
+    "husky": "^0.14.3",
+    "lint-staged": "^4.3.0",
+    "prettier": "^1.7.4"
   },
   "dependencies": {
-    "buttercup-generator": "^0.0.2",
+    "@buttercup/generator": "0.0.3",
     "classnames": "^2.2.5",
     "filter-react-dom-props": "^0.0.2",
     "polished": "^1.0.2",
