--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "deploy": "./deploy"
   },
   "lint-staged": {
-    "{src,stories}/**/*.js": ["prettier --write", "git add"]
+    "{src,stories}/**/*.js": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "devDependencies": {
-    "@kadira/storybook": "^2.35.3",
     "babel-cli": "^6.22.2",
     "babel-core": "^6.22.1",
     "babel-plugin-transform-class-properties": "^6.22.0",
@@ -28,19 +30,21 @@
     "babel-preset-react": "^6.22.0",
     "husky": "^0.14.3",
     "lint-staged": "^4.3.0",
-    "prettier": "^1.7.4"
+    "prettier": "^1.7.4",
+    "@storybook/react": "^3.3.12",
+    "@storybook/addons": "^3.3.12"
   },
   "dependencies": {
     "@buttercup/generator": "0.0.3",
     "classnames": "^2.2.5",
     "filter-react-dom-props": "^0.0.2",
     "polished": "^1.0.2",
-    "prop-types": "^15.5.10",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-icons": "^2.2.5",
-    "react-popover": "^0.4.14",
-    "styled-components": "^1.4.4",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-icons": "^2.2.7",
+    "react-popover": "^0.5.4",
+    "styled-components": "^3.1.6",
     "zxcvbn": "^4.4.2"
   }
 }
