Update generator, add jsx control statements

--- a/.babelrc
+++ b/.babelrc
@@ -11,6 +11,7 @@
     ],
     "plugins": [
         "transform-object-rest-spread",
-        "transform-class-properties"
+        "transform-class-properties",
+        "jsx-control-statements"
     ]
 }
