--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addons": "^3.3.12",
+    "@storybook/react": "^3.3.12",
     "babel-cli": "^6.22.2",
     "babel-core": "^6.22.1",
     "babel-plugin-transform-class-properties": "^6.22.0",
@@ -29,13 +31,12 @@
     "babel-preset-env": "^1.1.8",
     "babel-preset-react": "^6.22.0",
     "husky": "^0.14.3",
+    "jsx-control-statements": "^3.2.8",
     "lint-staged": "^4.3.0",
     "prettier": "^1.7.4",
-    "@storybook/react": "^3.3.12",
-    "@storybook/addons": "^3.3.12",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "styled-components": "^3.1.6"
+    "styled-components": "^3.2.1"
   },
   "peerDependencies": {
     "react": "^16.2.0",
@@ -43,11 +44,11 @@
     "styled-components": "^3.1.6"
   },
   "dependencies": {
-    "@buttercup/generator": "0.0.3",
+    "@buttercup/generator": "^1.0.0",
     "classnames": "^2.2.5",
     "filter-react-dom-props": "^0.0.2",
     "polished": "^1.0.2",
-    "prop-types": "^15.6.0",
+    "prop-types": "^15.6.1",
     "react-icons": "^2.2.7",
     "react-popover": "^0.5.4",
     "zxcvbn": "^4.4.2"
