--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   "license": "MIT",
   "scripts": {
     "build": "babel src --out-dir dist",
-    "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "prepublish": "npm run build",
+    "deploy": "./deploy",
     "format": "prettier --write '{src,stories}/**/*.js'",
     "precommit": "lint-staged",
-    "deploy": "./deploy"
+    "prepublish": "npm run build",
+    "storybook": "start-storybook -p 6006",
+    "test": "npm run test:unit",
+    "test:unit": "jest",
+    "test:updateSnapshots": "jest -u"
   },
   "lint-staged": {
     "{src,stories}/**/*.js": [
@@ -21,16 +24,32 @@
       "git add"
     ]
   },
+  "jest": {
+    "moduleFileExtensions": [
+      "js"
+    ],
+    "moduleDirectories": [
+      "src",
+      "node_modules"
+    ],
+    "setupTestFrameworkScriptFile": "<rootDir>__tests__/setup.js",
+    "testRegex": "/__tests__/.*\\.spec\\.js$"
+  },
   "devDependencies": {
     "@storybook/addons": "^3.3.12",
     "@storybook/react": "^3.3.12",
     "babel-cli": "^6.22.2",
     "babel-core": "^6.22.1",
+    "babel-jest": "^22.4.1",
     "babel-plugin-transform-class-properties": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.22.0",
     "babel-preset-env": "^1.1.8",
     "babel-preset-react": "^6.22.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.1",
     "husky": "^0.14.3",
+    "jest": "^22.4.2",
     "jsx-control-statements": "^3.2.8",
     "lint-staged": "^4.3.0",
     "prettier": "^1.7.4",
