--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write '{src,stories,__tests__}/**/*.js'",
     "precommit": "lint-staged",
     "prepublish": "npm run build",
+    "pub": "np",
     "storybook": "start-storybook -p 6006",
     "test": "run-s test:unit test:format",
     "test:format": "prettier-check '{src,stories,__tests__}/**/*.js'",
@@ -53,6 +54,7 @@
     "jest": "^22.4.2",
     "jsx-control-statements": "^3.2.8",
     "lint-staged": "^7.0.0",
+    "np": "^2.20.1",
     "npm-run-all": "^4.1.2",
     "prettier": "^1.11.1",
     "prettier-check": "^2.0.0",
