--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@buttercup/ui",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Buttercup UI Components in React",
   "main": "dist/index.js",
   "repository": "git@github.com:buttercup/buttercup-ui.git",
@@ -13,7 +13,7 @@
     "format": "prettier --write '{src,stories,__tests__}/**/*.js'",
     "precommit": "lint-staged",
     "prepublish": "npm run build",
-    "pub": "np",
+    "pub": "np --no-cleanup",
     "storybook": "start-storybook -p 6006",
     "test": "run-s test:unit test:format",
     "test:format": "prettier-check '{src,stories,__tests__}/**/*.js'",
