--- a/.babelrc
+++ b/.babelrc
@@ -12,6 +12,7 @@
     "plugins": [
         "@babel/plugin-transform-spread",
         "@babel/plugin-proposal-class-properties",
+        "@babel/plugin-proposal-function-bind",
         "jsx-control-statements"
     ]
 }
