--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "prettier-check": "^2.0.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-textarea-autosize": "^7.1.0",
     "styled-components": "^4.1.3"
   },
   "peerDependencies": {
