--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "styled-components": "^4.1.3"
   },
   "dependencies": {
+    "@buttercup/facades": "^0.3.0",
     "@buttercup/generator": "^1.2.0",
     "classnames": "^2.2.5",
     "filter-react-dom-props": "^0.0.2",
