--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
       "src",
       "node_modules"
     ],
-    "setupTestFrameworkScriptFile": "<rootDir>__tests__/setup.js",
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
     "testRegex": "/__tests__/.*\\.spec\\.js$"
   },
   "devDependencies": {
@@ -47,11 +49,12 @@
     "@storybook/addons": "^4.1.11",
     "@storybook/react": "^4.1.11",
     "babel-plugin-jsx-control-statements": "^4.0.0",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "enzyme-to-json": "^3.3.1",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.9.1",
+    "enzyme-to-json": "^3.3.5",
     "husky": "^1.3.1",
-    "jest": "^22.4.2",
+    "jest": "^24.1.0",
+    "jest-styled-components": "^6.3.1",
     "jsx-control-statements": "^3.2.8",
     "lint-staged": "^8.1.3",
     "npm-run-all": "^4.1.2",
@@ -73,7 +76,7 @@
     "polished": "^1.9.2",
     "prop-types": "^15.6.1",
     "react-icons": "^2.2.7",
-    "react-popover": "^0.5.4",
+    "react-popover": "^0.5.10",
     "zxcvbn": "^4.4.2"
   }
 }
