--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-textarea-autosize": "^7.1.0",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "uuid": "^3.3.2"
   },
   "peerDependencies": {
     "react": "^16.8.1",
