--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.9.1",
     "enzyme-to-json": "^3.3.5",
+    "fast-deep-equal": "^2.0.1",
     "husky": "^1.3.1",
     "jest": "^24.1.0",
     "jest-styled-components": "^6.3.1",
