--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "babel-plugin-jsx-control-statements": "^4.0.0",
     "babel-plugin-ramda": "^2.0.0",
     "buttercup": "^2.10.0",
+    "css-loader": "^2.1.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.9.1",
     "enzyme-to-json": "^3.3.5",
@@ -67,6 +68,7 @@
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-textarea-autosize": "^7.1.0",
+    "style-loader": "^0.23.1",
     "styled-components": "^4.1.3",
     "uuid": "^3.3.2"
   },
@@ -85,6 +87,7 @@
     "ramda": "^0.26.1",
     "react-icons": "^2.2.7",
     "react-popover": "^0.5.10",
+    "react-reflex": "^3.0.9",
     "zxcvbn": "^4.4.2"
   }
 }
