--- a/.babelrc
+++ b/.babelrc
@@ -12,6 +12,7 @@
     "plugins": [
         "ramda",
         "@babel/plugin-transform-spread",
+        "@babel/plugin-proposal-object-rest-spread",
         "@babel/plugin-proposal-class-properties",
         "@babel/plugin-proposal-function-bind",
         "jsx-control-statements"
