--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Sallar Kaboli <sallar.kaboli@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "babel src --out-dir dist",
+    "build": "webpack --config webpack.config.js",
     "build-storybook": "build-storybook",
     "format": "prettier --write '{src,stories,__tests__}/**/*.js'",
     "precommit": "lint-staged",
@@ -50,6 +50,7 @@
     "@storybook/addon-actions": "^4.1.11",
     "@storybook/addons": "^4.1.11",
     "@storybook/react": "^4.1.11",
+    "babel-loader": "^8.0.5",
     "babel-plugin-jsx-control-statements": "^4.0.0",
     "babel-plugin-ramda": "^2.0.0",
     "buttercup": "^2.10.0",
@@ -63,14 +64,21 @@
     "jest-styled-components": "^6.3.1",
     "jsx-control-statements": "^3.2.8",
     "lint-staged": "^8.1.3",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
     "npm-run-all": "^4.1.2",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "prettier": "^1.16.4",
     "prettier-check": "^2.0.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "styled-components": "^4.1.3",
-    "uuid": "^3.3.2"
+    "terser-webpack-plugin": "^1.2.3",
+    "uuid": "^3.3.2",
+    "webpack": "^4.29.5",
+    "webpack-cli": "^3.2.3"
   },
   "peerDependencies": {
     "react": "^16.8.1",
@@ -80,6 +88,8 @@
   "dependencies": {
     "@buttercup/generator": "^1.2.0",
     "@buttercup/react-formatted-input": "^1.0.1",
+    "@blueprintjs/core": "^3.13.0",
+    "@blueprintjs/icons": "^3.6.0",
     "classnames": "^2.2.5",
     "filter-react-dom-props": "^0.0.2",
     "polished": "^1.9.2",
