--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.9.1",
     "enzyme-to-json": "^3.3.5",
+    "extract-domain": "^2.0.4",
     "fast-deep-equal": "^2.0.1",
+    "file-loader": "^3.0.1",
     "husky": "^1.3.1",
     "jest": "^24.1.0",
     "jest-styled-components": "^6.3.1",
@@ -86,10 +88,11 @@
     "styled-components": "^4.1.3"
   },
   "dependencies": {
-    "@buttercup/generator": "^1.2.0",
-    "@buttercup/react-formatted-input": "^1.0.1",
     "@blueprintjs/core": "^3.13.0",
     "@blueprintjs/icons": "^3.6.0",
+    "@buttercup/generator": "^1.2.0",
+    "@buttercup/iconographer": "^1.1.1",
+    "@buttercup/react-formatted-input": "^1.0.1",
     "classnames": "^2.2.5",
     "filter-react-dom-props": "^0.0.2",
     "polished": "^1.9.2",
