--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "author": "Sallar Kaboli <sallar.kaboli@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
-    "build-storybook": "build-storybook",
+    "build": "npm run clean && webpack --config webpack.config.js",
+    "build:storybook": "build-storybook",
+    "clean": "rimraf dist",
     "format": "prettier --write '{src,stories,__tests__}/**/*.js'",
     "precommit": "lint-staged",
     "prepublishOnly": "npm run build",
@@ -74,6 +75,7 @@
     "prettier-check": "^2.0.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "styled-components": "^4.1.3",
