--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "prettier-check": "^2.0.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-hotkeys": "^1.1.4",
     "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
