--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "@buttercup/react-formatted-input": "^1.0.1",
     "classnames": "^2.2.5",
     "filter-react-dom-props": "^0.0.2",
+    "fuse.js": "^3.4.4",
     "polished": "^1.9.2",
     "prop-types": "^15.6.1",
     "ramda": "^0.26.1",
