--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,7 @@
             "targets": {
                 "chrome": 66
             },
-            "useBuiltIns": "usage",
+            "useBuiltIns": false,
             "loose": true
         }]
     ],
