--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "style-loader": "^0.23.1",
     "styled-components": "^4.3.2",
     "terser-webpack-plugin": "^1.4.1",
+    "uuid": "^3.3.3",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.7"
   },
