--- a/package.json
+++ b/package.json
@@ -51,14 +51,15 @@
     "@babel/plugin-transform-spread": "^7.2.2",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "@buttercup/facades": "^1.1.0",
+    "@buttercup/app-env": "^0.1.1",
+    "@buttercup/facades": "^1.2.0",
     "@storybook/addon-actions": "^4.1.11",
     "@storybook/addons": "^4.1.11",
     "@storybook/react": "^4.1.11",
     "babel-loader": "^8.0.6",
     "babel-plugin-jsx-control-statements": "^4.0.0",
     "babel-plugin-ramda": "^2.0.0",
-    "buttercup": "^2.15.4",
+    "buttercup": "^3.0.0-rc3.0",
     "css-loader": "^2.1.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
