--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^1.18.2",
     "prettier-check": "^2.0.0",
+    "random-words": "^1.1.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-hotkeys": "^1.1.4",
