--- a/package.json
+++ b/package.json
@@ -51,8 +51,6 @@
     "@babel/plugin-transform-spread": "^7.2.2",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "@buttercup/app-env": "^0.1.1",
-    "@buttercup/facades": "^1.6.0",
     "@storybook/addon-actions": "^4.1.11",
     "@storybook/addons": "^4.1.11",
     "@storybook/react": "^4.1.11",
@@ -92,7 +90,7 @@
     "webpack-cli": "^3.3.7"
   },
   "peerDependencies": {
-    "@buttercup/facades": ">= 1.6.0",
+    "buttercup": ">= 4",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "styled-components": "^4.1.3"
