--- a/package.json
+++ b/package.json
@@ -43,29 +43,29 @@
     "testRegex": "/__tests__/.*\\.spec\\.js$"
   },
   "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-function-bind": "^7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
-    "@babel/plugin-transform-spread": "^7.2.2",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "@storybook/addon-actions": "^4.1.11",
-    "@storybook/addons": "^4.1.11",
-    "@storybook/react": "^4.1.11",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-jsx-control-statements": "^4.0.0",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-function-bind": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/plugin-transform-spread": "^7.8.3",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "@storybook/addon-actions": "^5.3.18",
+    "@storybook/addons": "^5.3.18",
+    "@storybook/react": "^5.3.18",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-jsx-control-statements": "^4.1.0",
     "babel-plugin-ramda": "^2.0.0",
-    "buttercup": "^3.0.0-rc3.0",
-    "css-loader": "^2.1.1",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "enzyme-to-json": "^3.4.0",
+    "buttercup": "^3.0.0",
+    "css-loader": "^3.5.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.4",
     "extract-domain": "^2.2.1",
     "fast-deep-equal": "^2.0.1",
-    "file-loader": "^3.0.1",
-    "husky": "^1.3.1",
+    "file-loader": "^6.0.0",
+    "husky": "^4.2.5",
     "jest": "^24.9.0",
     "jest-styled-components": "^6.3.3",
     "jsx-control-statements": "^3.2.8",
@@ -74,20 +74,20 @@
     "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "prettier": "^1.18.2",
+    "prettier": "^2.0.4",
     "prettier-check": "^2.0.0",
-    "random-words": "^1.1.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "random-words": "^1.1.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-hotkeys": "^1.1.4",
     "rimraf": "^2.7.1",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "styled-components": "^4.3.2",
-    "terser-webpack-plugin": "^1.4.1",
-    "uuid": "^3.3.3",
-    "webpack": "^4.39.3",
-    "webpack-cli": "^3.3.7"
+    "sass-loader": "^7.3.1",
+    "style-loader": "^1.1.3",
+    "styled-components": "^5.1.0",
+    "terser-webpack-plugin": "^1.4.3",
+    "uuid": "^3.4.0",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
   },
   "peerDependencies": {
     "buttercup": ">= 4",
@@ -96,8 +96,8 @@
     "styled-components": "^4.1.3"
   },
   "dependencies": {
-    "@blueprintjs/core": "^3.18.0",
-    "@blueprintjs/icons": "^3.10.0",
+    "@blueprintjs/core": "^3.25.0",
+    "@blueprintjs/icons": "^3.15.0",
     "@buttercup/generator": "^1.2.0",
     "@buttercup/iconographer": "^1.2.0",
     "@buttercup/react-formatted-input": "^1.3.0",
@@ -105,9 +105,9 @@
     "filter-react-dom-props": "^0.0.2",
     "fuse.js": "^3.4.5",
     "otpauth": "^3.2.8",
-    "polished": "^1.9.2",
+    "polished": "^1.9.3",
     "prop-types": "^15.7.2",
-    "ramda": "^0.26.1",
+    "ramda": "^0.27.0",
     "react-icons": "^2.2.7",
     "react-popover": "^0.5.10",
     "react-reflex": "^3.0.22",
