--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-jsx-control-statements": "^4.1.0",
     "babel-plugin-ramda": "^2.0.0",
-    "buttercup": "^3.0.0",
+    "buttercup": "4.0.0-r01",
     "css-loader": "^3.5.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
