--- a/package.json
+++ b/package.json
@@ -44,27 +44,27 @@
     "testRegex": "/__tests__/.*\\.spec\\.js$"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-function-bind": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
-    "@babel/plugin-transform-spread": "^7.8.3",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/preset-react": "^7.9.4",
-    "@storybook/addon-actions": "^5.3.18",
-    "@storybook/addons": "^5.3.18",
-    "@storybook/react": "^5.3.18",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.7",
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.10.5",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-function-bind": "^7.10.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
+    "@babel/plugin-transform-spread": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "@storybook/addon-actions": "^5.3.19",
+    "@storybook/addons": "^5.3.19",
+    "@storybook/react": "^5.3.19",
+    "@types/react": "^16.9.43",
+    "@types/react-dom": "^16.9.8",
     "babel-loader": "^8.1.0",
     "babel-plugin-jsx-control-statements": "^4.1.0",
     "babel-plugin-ramda": "^2.0.0",
-    "buttercup": "4.0.0-r02",
-    "css-loader": "^3.5.2",
+    "buttercup": "^4.9.2",
+    "css-loader": "^3.6.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "enzyme-to-json": "^3.4.4",
+    "enzyme-to-json": "^3.5.0",
     "extract-domain": "^2.2.1",
     "fast-deep-equal": "^2.0.1",
     "file-loader": "^6.0.0",
@@ -86,14 +86,14 @@
     "rimraf": "^3.0.2",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
-    "styled-components": "^5.1.0",
+    "styled-components": "^5.1.1",
     "terser-webpack-plugin": "^2.3.5",
-    "typescript": "^3.8.3",
+    "typescript": "^3.9.7",
     "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.12"
   },
   "peerDependencies": {
-    "buttercup": ">= 4",
+    "buttercup": ">= 4.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "styled-components": "^4.1.3"
