Add credit card display

--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "prettier-check": "^2.0.0",
     "random-words": "^1.1.1",
     "react": "^16.13.1",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.2",
     "react-hotkeys": "^1.1.4",
