Fix generator tests

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
       "src",
       "node_modules"
     ],
+    "setupFilesAfterEnv": ["<rootDir>/__tests__/index.js"],
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
     ],
