--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@buttercup/ui",
-  "version": "4.0.0",
+  "version": "4.0.1",
   "description": "Buttercup UI Components in React",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -45,7 +45,9 @@
       "src",
       "node_modules"
     ],
-    "setupFilesAfterEnv": ["<rootDir>/__tests__/index.js"],
+    "setupFilesAfterEnv": [
+      "<rootDir>/__tests__/index.js"
+    ],
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
     ],
