--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "path-posix": "^1.0.0",
     "prettier": "^1.19.1",
     "prettier-check": "^2.0.0",
     "random-words": "^1.1.1",
