--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@storybook/react": "^5.3.19",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
+    "@types/react-splitter-layout": "^3.0.1",
     "arraybuffer-loader": "^1.0.8",
     "babel-loader": "^8.1.0",
     "babel-plugin-jsx-control-statements": "^4.1.0",
@@ -98,6 +99,7 @@
     "react-dom": "^16.14.0",
     "react-dropzone": "^11.0.2",
     "react-hotkeys": "^1.1.4",
+    "react-splitter-layout": "^4.0.0",
     "rimraf": "^3.0.2",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
@@ -129,7 +131,6 @@
     "ramda": "^0.27.0",
     "react-icons": "^2.2.7",
     "react-popover": "^0.5.10",
-    "react-reflex": "^3.0.22",
     "react-textarea-autosize": "^7.1.2",
     "zxcvbn": "^4.4.2"
   }
