--- a/package.json
+++ b/package.json
@@ -53,6 +53,9 @@
     ],
     "testRegex": "/__tests__/.*\\.spec\\.js$"
   },
+  "resolutions": {
+    "@storybook/{app}/webpack": "^5"
+  },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
     "@babel/core": "^7.10.5",
@@ -62,32 +65,36 @@
     "@babel/plugin-transform-spread": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
-    "@storybook/addon-actions": "^5.3.19",
-    "@storybook/addons": "^5.3.19",
-    "@storybook/react": "^5.3.19",
+    "@storybook/addon-actions": "^6.4.19",
+    "@storybook/addons": "^6.4.19",
+    "@storybook/builder-webpack5": "^6.4.19",
+    "@storybook/manager-webpack5": "^6.4.19",
+    "@storybook/preset-scss": "^1.0.3",
+    "@storybook/react": "^6.4.19",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "@types/react-splitter-layout": "^3.0.1",
     "arraybuffer-loader": "^1.0.8",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-jsx-control-statements": "^4.1.0",
+    "babel-loader": "^8.2.3",
+    "babel-plugin-jsx-control-statements": "^4.1.2",
     "babel-plugin-ramda": "^2.0.0",
     "buttercup": "^6.0.0",
-    "css-loader": "^3.6.0",
+    "css-loader": "^6.6.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.1",
     "extract-domain": "^2.2.1",
     "fast-deep-equal": "^2.0.1",
-    "file-loader": "^6.0.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "husky": "^4.2.5",
     "i18next": "^19.9.1",
     "jest": "^26.6.3",
     "jest-styled-components": "^7.0.3",
     "jsx-control-statements": "^3.2.8",
     "lint-staged": "^10.1.3",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.1",
+    "mini-css-extract-plugin": "^2.5.3",
+    "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "path-posix": "^1.0.0",
@@ -101,13 +108,13 @@
     "react-hotkeys": "^1.1.4",
     "react-splitter-layout": "^4.0.0",
     "rimraf": "^3.0.2",
-    "sass-loader": "^8.0.2",
-    "style-loader": "^1.1.3",
+    "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1",
     "styled-components": "^5.1.1",
-    "terser-webpack-plugin": "^2.3.5",
+    "terser-webpack-plugin": "^5.3.1",
     "typescript": "^3.9.7",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.12",
+    "webpack": "^5.69.0",
+    "webpack-cli": "^4.9.2",
     "xbytes": "^1.6.2"
   },
   "peerDependencies": {
