--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "babel-loader": "^8.2.3",
     "babel-plugin-jsx-control-statements": "^4.1.2",
     "babel-plugin-ramda": "^2.0.0",
-    "buttercup": "^6.0.0",
+    "buttercup": "^6.12.0",
     "css-loader": "^6.6.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
@@ -100,7 +100,7 @@
     "path-posix": "^1.0.0",
     "prettier": "^1.19.1",
     "prettier-check": "^2.0.0",
-    "random-words": "^1.1.1",
+    "random-words": "^1.1.2",
     "react": "^16.14.0",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^16.14.0",
@@ -110,18 +110,18 @@
     "rimraf": "^3.0.2",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
-    "styled-components": "^5.1.1",
+    "styled-components": "^5.3.3",
     "terser-webpack-plugin": "^5.3.1",
-    "typescript": "^3.9.7",
+    "typescript": "^4.5.5",
     "webpack": "^5.69.0",
     "webpack-cli": "^4.9.2",
-    "xbytes": "^1.6.2"
+    "xbytes": "^1.7.0"
   },
   "peerDependencies": {
-    "buttercup": ">= 6",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "styled-components": "^4.1.3"
+    "buttercup": ">=6",
+    "react": ">=16",
+    "react-dom": ">=16",
+    "styled-components": ">=5"
   },
   "dependencies": {
     "@blueprintjs/core": "^3.36.0",
