--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@buttercup/ui",
-  "version": "5.1.1",
+  "version": "5.2.0-0",
   "description": "Buttercup UI Components in React",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
