--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "babel-plugin-jsx-control-statements": "^4.1.2",
     "babel-plugin-ramda": "^2.0.0",
     "buttercup": "^6.12.0",
-    "css-loader": "^6.6.0",
+    "css-loader": "^6.7.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.1",
@@ -93,27 +93,27 @@
     "jest-styled-components": "^7.0.3",
     "jsx-control-statements": "^3.2.8",
     "lint-staged": "^10.1.3",
-    "mini-css-extract-plugin": "^2.5.3",
-    "node-sass": "^7.0.1",
+    "mini-css-extract-plugin": "^2.6.0",
     "npm-run-all": "^4.1.5",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "path-posix": "^1.0.0",
     "prettier": "^1.19.1",
     "prettier-check": "^2.0.0",
     "random-words": "^1.1.2",
-    "react": "^16.14.0",
+    "react": "^17.0.2",
     "react-credit-cards": "^0.8.3",
-    "react-dom": "^16.14.0",
+    "react-dom": "^17.0.2",
     "react-dropzone": "^11.0.2",
     "react-hotkeys": "^1.1.4",
     "react-splitter-layout": "^4.0.0",
     "rimraf": "^3.0.2",
+    "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
-    "styled-components": "^5.3.3",
+    "styled-components": "^5.3.5",
     "terser-webpack-plugin": "^5.3.1",
-    "typescript": "^4.5.5",
-    "webpack": "^5.69.0",
+    "typescript": "^4.6.4",
+    "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "xbytes": "^1.7.0"
   },
@@ -124,10 +124,10 @@
     "styled-components": ">=5"
   },
   "dependencies": {
-    "@blueprintjs/core": "^3.36.0",
-    "@blueprintjs/icons": "^3.15.0",
+    "@blueprintjs/core": "^4.3.0",
+    "@blueprintjs/icons": "^4.2.5",
     "@buttercup/generator": "^2.0.0",
-    "@buttercup/react-formatted-input": "^1.3.0",
+    "@buttercup/react-formatted-input": "^1.4.0",
     "@fontsource/inter": "^4.1.0",
     "classnames": "^2.2.6",
     "filter-react-dom-props": "^0.0.2",
@@ -136,7 +136,7 @@
     "polished": "^1.9.3",
     "prop-types": "^15.7.2",
     "ramda": "^0.27.0",
-    "react-icons": "^2.2.7",
+    "react-icons": "^4.3.1",
     "react-popover": "^0.5.10",
     "react-textarea-autosize": "^7.1.2",
     "zxcvbn": "^4.4.2"
