--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.16",
     "@types/react-splitter-layout": "^3.0.2",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "arraybuffer-loader": "^1.0.8",
     "babel-loader": "^8.2.3",
     "babel-plugin-jsx-control-statements": "^4.1.2",
@@ -81,7 +82,6 @@
     "buttercup": "^6.13.1",
     "css-loader": "^6.7.1",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.1",
     "extract-domain": "^2.2.1",
     "fast-deep-equal": "^2.0.1",
