Update dependencies / webpack

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     // Types should go into this directory.
     // Removing this would place the .d.ts files
     // next to the .js files
-    "outDir": "dist"
+    "outDir": "dist",
+    "jsx": "react"
   }
 }
