--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "@storybook/builder-webpack5": "^6.4.19",
     "@storybook/manager-webpack5": "^6.4.19",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^6.4.19",
+    "@storybook/react": "^6.1.21",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.16",
     "@types/react-splitter-layout": "^3.0.2",
@@ -81,6 +81,7 @@
     "babel-plugin-ramda": "^2.0.0",
     "buttercup": "^6.13.1",
     "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.0.0",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.1",
     "extract-domain": "^2.2.1",
@@ -95,13 +96,14 @@
     "lint-staged": "^10.1.3",
     "mini-css-extract-plugin": "^2.6.0",
     "npm-run-all": "^4.1.5",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "path-posix": "^1.0.0",
     "prettier": "^1.19.1",
     "prettier-check": "^2.0.0",
     "random-words": "^1.1.2",
     "react": "^17.0.2",
     "react-credit-cards": "^0.8.3",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.0.2",
     "react-hotkeys": "^1.1.4",
@@ -120,6 +122,8 @@
   "peerDependencies": {
     "buttercup": ">=6",
     "react": ">=16",
+    "react-dnd": ">=16.0.1",
+    "react-dnd-html5-backend": ">=16.0.1",
     "react-dom": ">=16",
     "styled-components": ">=5"
   },
@@ -138,7 +142,7 @@
     "ramda": "^0.27.0",
     "react-icons": "^4.3.1",
     "react-popover": "^0.5.10",
-    "react-textarea-autosize": "^7.1.2",
+    "react-textarea-autosize": "^8.3.4",
     "zxcvbn": "^4.4.2"
   }
 }
