--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": "git@github.com:buttercup/buttercup-ui.git",
-  "author": "Sallar Kaboli <sallar.kaboli@gmail.com>",
+  "author": "Perry Mitchell <perry@perrymitchell.net>",
   "license": "MIT",
   "scripts": {
     "build": "npm run clean && webpack --mode production --config webpack.config.js",
@@ -51,7 +51,14 @@
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
     ],
-    "testRegex": "/__tests__/.*\\.spec\\.js$"
+    "testRegex": "/__tests__/.*\\.spec\\.js$",
+    "testEnvironment": "jsdom",
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "/!node_modules\\/react-dnd/"
+    ]
   },
   "resolutions": {
     "@storybook/{app}/webpack": "^5"
@@ -62,23 +69,26 @@
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-function-bind": "^7.10.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
+    "@babel/plugin-transform-modules-commonjs": "^7.18.2",
     "@babel/plugin-transform-spread": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addons": "^6.4.19",
-    "@storybook/builder-webpack5": "^6.4.19",
-    "@storybook/manager-webpack5": "^6.4.19",
+    "@storybook/builder-webpack5": "^6.5.9",
+    "@storybook/manager-webpack5": "^6.5.9",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^6.1.21",
+    "@storybook/react": "^6.5.9",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.16",
     "@types/react-splitter-layout": "^3.0.2",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "arraybuffer-loader": "^1.0.8",
+    "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.3",
     "babel-plugin-jsx-control-statements": "^4.1.2",
     "babel-plugin-ramda": "^2.0.0",
+    "babel-polyfill": "^6.26.0",
     "buttercup": "^6.13.1",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
@@ -90,8 +100,8 @@
     "html-webpack-plugin": "^5.5.0",
     "husky": "^4.2.5",
     "i18next": "^19.9.1",
-    "jest": "^26.6.3",
-    "jest-styled-components": "^7.0.3",
+    "jest": "^27.5.1",
+    "jest-styled-components": "^7.0.8",
     "jsx-control-statements": "^3.2.8",
     "lint-staged": "^10.1.3",
     "mini-css-extract-plugin": "^2.6.0",
@@ -99,7 +109,7 @@
     "path-posix": "^1.0.0",
     "prettier": "^1.19.1",
     "prettier-check": "^2.0.0",
-    "random-words": "^1.1.2",
+    "random-words": "^1.2.0",
     "react": "^17.0.2",
     "react-credit-cards": "^0.8.3",
     "react-dnd": "^16.0.1",
@@ -109,14 +119,14 @@
     "react-hotkeys": "^1.1.4",
     "react-splitter-layout": "^4.0.0",
     "rimraf": "^3.0.2",
-    "sass": "^1.51.0",
+    "sass": "^1.52.3",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "styled-components": "^5.3.5",
     "terser-webpack-plugin": "^5.3.1",
-    "typescript": "^4.6.4",
+    "typescript": "^4.7.4",
     "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2",
+    "webpack-cli": "^4.10.0",
     "xbytes": "^1.7.0"
   },
   "peerDependencies": {
@@ -128,8 +138,8 @@
     "styled-components": ">=5"
   },
   "dependencies": {
-    "@blueprintjs/core": "^4.3.0",
-    "@blueprintjs/icons": "^4.2.5",
+    "@blueprintjs/core": "^4.5.1",
+    "@blueprintjs/icons": "^4.3.0",
     "@buttercup/generator": "^2.0.0",
     "@buttercup/react-formatted-input": "^1.4.0",
     "@fontsource/inter": "^4.1.0",
